--- a/Studio.html
+++ b/Studio.html
@@ -1,5 +1,7 @@
 <html>
    <body>
-      <p>Radio check. Pilot, please confirm.</p>
+      <p>Radio check. Pilot, please confirm.</p> 
+      <p>Rover was stressful!!</p>
+
    </body>
 </html>
